src/test/deca/context/invalid/pierre/objects/overrideWrongSig3.deca
class A {
    int method(int i, int j) {}
}
class B extends A {
    int method(int i, float j) {}
}
{}